# balance

./: Cargo.toml  Dockerfile  build.rs
.agent/rules/: styling.md
.github/workflows/: docker-publish.yml
grpcurl/: commands  commands.http
proto/: depot.proto
src/: client.rs  main.rs  server.rs  types.rs
src/operations/: add.rs  buy.rs  get.rs  mod.rs  sell.rs  take.rs  transactions.rs
