[package]
name = "balance"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = "0.12"
prost = "0.13"
tonic-reflection = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
