[package]
name = "balance"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"



[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
prost = "0.14.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
